This may fix the blurring on Chromium browsers. Going to push and check now.

--- a/frontend/styles/panel.css
+++ b/frontend/styles/panel.css
@@ -39,7 +39,7 @@ smorgas-board panel-element {
     }
 
     &:hover::part(panel-body) {
-        transform: scale(1.02) rotateZ(0deg);
+        transform: perspective(1rem) scale(1.015) rotateZ(0deg);
     }
 
     &::part(panel-body in-motion) {
@@ -237,7 +237,7 @@ smorgas-board panel-element.being-manipulated {
     &::part(panel-body) {
         background: rgb(from var(--panel-bg) r g b / var(--panel-manip-opacity));
         box-shadow: inset 0.2rem 0.2rem 0.5rem 0.1rem hsl(from var(--panel-bg) h s calc(l * 2) / 0.4), inset -0.2rem -0.2rem 0.5rem 0.1rem hsl(from var(--panel-bg) h s calc(l * 0.4) / 0.4);
-        filter: drop-shadow(1.5rem 1.5rem 2rem var(--shadow-col));
+        box-shadow: 1.5rem 1.5rem 2rem var(--shadow-col);
         pointer-events: none;
         backdrop-filter: blur(1px);
     }
@@ -371,8 +371,8 @@ smorgas-board panel-element.final-preview {
 @media (hover: hover) {
     smorgas-board panel-element:not(.configuring, .in-edit-mode panel-element) {
         &:hover::part(panel-body) {
-            filter: drop-shadow(var(--shadow-offset-x) var(--shadow-offset-y) 0.2rem var(--shadow-col));
-            transform: scale(1.02) perspective(200rem) rotateX(var(--rotate-x, 0)) rotateY(var(--rotate-y, 0)) rotateZ(0deg);
+            box-shadow: var(--shadow-offset-x) var(--shadow-offset-y) 0.2rem 0 var(--shadow-col);
+            transform: perspective(200rem) rotateX(var(--rotate-x, 0)) rotateY(var(--rotate-y, 0)) rotateZ(0deg);
         }
     }
 }
